RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
==================================================

CHANGES in MALDIquantForeign VERSION 0.11.3 [2018-05-27]:
---------------------------------------------------------

BUGFIX

* Don't use scientific format for numeric values in (i)mzML export.
  Patch by F. Orlando Galashan (see #25).


CHANGES in MALDIquantForeign VERSION 0.11.2 [2018-03-18]:
---------------------------------------------------------

BUGFIX

* Fix missing unitName in intensity array in mzMl export.
  Reported by Jan Kobarg patch proposed by F. Orlando Galashan (see #22/#24).


CHANGES IN MALDIquantForeign VERSION 0.11.1 [2017-12-04]:
---------------------------------------------------------

BUGFIX

* Fix handling of "processed" argument in `.writeImzMlDocument`; see #21.
* Fix `export` method if there was no filename given.


CHANGES IN MALDIquantForeign VERSION 0.11 [2017-09-01]:
-------------------------------------------------------

BUGFIX

* Fix integer overflow in `.ibdOffsets`; see issue #20.
* Fix `exportImzMl` for missing coordinates, pixelSize and dimension; closes
* #20.

INTERNAL CHANGES

* Put MALDIquant into single quotes in the DESCRIPTION file.
* Rezip inst/compressed/csv.tar.gz using `gzip -n` to avoid lintian's
  package-contains-timestamped-gzip warning; see
  https://wiki.debian.org/ReproducibleBuilds for details.


CHANGES IN MALDIquantForeign VERSION 0.10 [2015-10-31]:
-------------------------------------------------------

IMPROVEMENTS

* Add parallel support on unix-based platforms using the parallel package.
  All `import*` functions support the "mc.cores" argument (default is 1, means
  no parallel import). Please read also `?"MALDIquantForeign-parallel"`.
* Add importer for .msd (mMass) files: `importMsd`.
* Add basic export support for imzML files: `exportImzMl`.
* `.importImzMl`: add "coordinates" argument to access specific spectra by
  their x, y coordinates within an imzML file; closes #14;