@@ -1,11 +1,12 @@
 Package: MALDIquantForeign
-Version: 0.11.3
-Date: 2018-05-27
+Version: 0.11.4
+Date: 2018-08-01
 Title: Import/Export Routines for 'MALDIquant'
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
-        email="mail@sebastiangibb.de", comment=c(ORCID="0000-0001-7406-4443")),
-        person("Pietro", "Franceschi",
-        role=c("ctb"), email="pietro.franceschi@fmach.it"))
+        email="mail@sebastiangibb.de",
+        comment=c(ORCID="0000-0001-7406-4443")), person("Pietro",
+        "Franceschi", role=c("ctb"),
+        email="pietro.franceschi@fmach.it"))
 Depends: R (>= 3.2.2), methods, MALDIquant (>= 1.16.4)
 Imports: base64enc, digest, readBrukerFlexData (>= 1.7), readMzXmlData
         (>= 2.7), XML
